# dsp-playground

data-bender/: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  plugin.json
data-bender/core/: DataBenderEngine.cpp  DataBenderEngine.hpp
data-bender/juce/: CMakeLists.txt  DataBender_Template.aph  DataBender_Template.aph.filtergraph  auto-rebuild.sh  build.sh  setup-template.sh  test-watch.sh
data-bender/juce/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
data-bender/vcv/: DataBenderModule.cpp  DataBenderModule.hpp  plugin.cpp  plugin.hpp
